# Test

./: .gitignore  LICENSE  README.md
1_gate/: README.md
2_polarization/: README.md  polarization_calculation.py  polarization_magnetic_field.py  polarization_spe_spectra_comparison.py
3_power/: 4stack_powermap_dependancy.py  Power_dependence_map.py  README.md  combined_powermap_dependancy.py  combined_powermap_fitting_cho.py  combined_powermap_plot_cho.py  combinefiles_h5_powerdependence.py  power_dependence_plot_fit.py  power_dependence_plot_fit_polarization.py
4_etc/: Bfield_spe.py  Bfield_spe_2.py  HWP_Calibration.py  HWP_plot.py  Open_h5.py  Polarization_Magnetic_field_fitting.py  Polarization_Magnetic_field_map.py  Polarization_Magnetic_field_peak_finder.py  Polarization_double_Magnetic_field_map.py  Polarization_power_dependence.py  Polarization_single_Magnetic_field_map.py  UiRanges.py  hdf5_step_range.py  spe_reader.py
4_etc/voltage-sweep-gui/: README.md  pyproject.toml  requirements.txt
4_etc/voltage-sweep-gui/src/: diff_reflectance.py  main.py  run_diff_reflectance_fixed_paths.py
4_etc/voltage-sweep-gui/src/voltage_sweep/: Voltage_sweep.py  gui.py
old/: 4stack_powermap_dependancy.py  Doping_dependence.py  Power calibration.py  Power calibration_2.py  Powerdependence.py  Powerdependence_2.py  Powerdependence_20250916.py  Powerdependence_3.py  Powerdependence_fillingfator.py  Powerdependence_fitting.py  Voltage_to_power_spe.py  new_powermap_dependancy.py  plot2dmap.py  plot3dmap.py
tools/: Csv_to_PDF_Converter.py  Field calibration.ipynb  QPLemail.py  (+8 more)
(+16 files in other folders)
